# cosmic-web

./: CHANGELOG.md  README.md  domains.yaml  mkdocs.yml  pyproject.toml
data/: gadget_power_spectrum.txt
examples/: cosmic_web_benchmark.py
src/cosmic_web/: __init__.py  app.py  cli.py  core.py  entropy_table_bridge.py
src/genesis_os/: __init__.py  universums_sim.py
tests/: test_cli.py  test_core.py  test_universums_sim.py
