[project]
name = "cosmic-web"
version = "0.1.0"
description = "The cosmic web layer for the GenesisAeon stack – relational network of entropy gates, cosmic moments, mandala nodes and emergence visualization."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GenesisAeon Team", email = "team@genesisaeon.org" }]
keywords = ["network", "emergence", "cosmic", "visualization", "graph", "genesisaeon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "networkx>=3.3",
    "plotly>=5.22.0",
    "dash>=2.17.0",
    "numpy>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
stack = [
    "mirror-machine>=0.1.0",
    "climate-dashboard>=0.1.0",
    "sonification>=0.1.0",
    "mandala-visualizer>=0.1.0",
    "utac-core>=0.1.0",
    "sigillin>=0.1.0",
    "fieldtheory>=0.1.0",
    "cosmic-moment>=0.1.0",
    "medium-modulation>=0.1.0",
    "entropy-governance>=0.1.0",
    "entropy-table>=1.0.1",
    "implosive-genesis>=0.4.0",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9"]
docs = ["mkdocs>=1.6", "mkdocstrings[python]>=0.27", "mkdocs-material>=9.6"]

[project.scripts]
cweb = "cosmic_web.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/cosmic-web"
Issues = "https://github.com/GenesisAeon/cosmic-web/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmic_web"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cosmic_web --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
